--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "gigs-shared"]
-	path = gigs-shared
+[submodule "server/gigs-shared"]
+	path = server/gigs-shared
 	url = https://github.com/navi-gigs/gigs-shared
